--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"firebase": "^4.2.0",
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.47.0",
+		"react-native-router-flux": "^4.0.0-beta.19",
 		"react-redux": "^5.0.5",
 		"redux": "^3.7.2",
 		"redux-thunk": "^2.2.0"
